--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,12 @@
 {% block content %}
 <div class="content">
     <p>Reach your goals with this app. Reward yourself when you complete your goals.</p>
-    <button>login</button>
-    <button>sign up</button>
-    <p>Good luck!</p>
+    <p>
+        <a href=login><button>login</button></a>
+    </p>
+    <p>
+        <a href=signup><button>sign up</button></a>
+    </p>
+    <h2>Good luck!</h2>
 </div>
 {% endblock %}
