--- a/templates/createPromise.html
+++ b/templates/createPromise.html
@@ -1,7 +1,17 @@
 {%extends 'base.html' %}
 
 {% block content %}
+{% for cat, msg in get_flashed_messages(True) %}
+<div class="flash {{cat}}">{{msg}}</div>
+{% endfor %}
 <div class="content">
+    <div class="usermenu">
+        <ul class="mainmenu">
+            {% for m in menu %}
+            <li class="mainmenu"><a href="{{m.url}}">{{m.name}}</a></li>
+            {%endfor%}
+        </ul>
+    </div>
     <h1>Hello!</h1>
     <h3>Create your promise!</h3>
     <form action="/profile" method="post" class="form-create">
