--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,19 @@
 {%extends 'base.html' %}
 
 {% block content %}
-
-<button>login</button>
-<button type="submit">Submit</button>
-<p>Good luck!</p>
+<div class="content">
+    <form action="/login" method="post" class="form-contact">
+        <p>
+            <label>Name:</label>
+            <input type="text" name="username" value="" required />
+        </p>
+        <p>
+            <label>Password:</label>
+            <input type="password" name="psw" value="" required />
+        </p>
+        <p>
+            <input type="submit" value="Submit" required />
+        </p>
+    </form>
+</div>
 {% endblock %}
